# game-activity-jni-onload-repro

./: README.md
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  app.cpp  libapp.map.txt
app/src/main/java/com/example/myapplication/: MainActivity.kt
